# comelit-hub-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release-linux.yaml  release-macos.yaml  release-windows.yaml  release.yml  rust.yml
.zed/: debug.json
client/: Cargo.toml
client/src/: lib.rs
client/src/cli/: comelit.rs  utils.rs
client/src/cli/commands/: device_info.rs  lights.rs  listen.rs  mod.rs  scan.rs
client/src/protocol/: client.rs  credentials.rs  manager.rs  messages.rs  mod.rs  out_data_messages.rs  scanner.rs
data/: aid_cache.json  config.json
hap/: Cargo.toml  README.md
hap/installer/: comelit-hub-ctl.sh  comelit-hub-hap.env  comelit-hub-wrapper.sh  default-config.json  install.sh  uninstall.sh
hap/installer/linux/: comelit-hub-hap.conf  comelit-hub-hap.service
hap/installer/macos/: com.comelit.hub.hap.plist  comelit-hub-hap.conf
hap/installer/msi/: product.msi
hap/installer/windows/: install.ps1  uninstall.ps1
hap/src/: bridge.rs  logging.rs  main.rs  settings.rs
hap/src/accessories/: cached_value.rs  comelit_accessory.rs  door.rs  doorbell.rs  lightbulb.rs  mod.rs  thermostat.rs  window_covering.rs
hap/src/accessories/state/: door.rs  light.rs  mod.rs  thermostat.rs  window_covering.rs
hap/src/web/: metrics.rs  mod.rs  qrcode_template.rs  state.rs
hap/templates/: base.html  charts.html  devices.html  index.html
matter/: Cargo.toml
matter/src/: bridge.rs  light.rs  main.rs  mdns.rs
src/: lib.rs  main.rs  settings.rs
src/cli/: comelit.rs  hap-bridge.rs  mod.rs
src/hap/: bridge.rs  mod.rs
src/hap/accessories/: comelit_accessory.rs  dehumidifier.rs  lightbulb.rs  mod.rs  thermostat.rs  window_covering.rs
src/hap/accessories/state/: light.rs  mod.rs  thermostat.rs
src/js/: js_client.rs  mod.rs
src/protocol/: client.rs  credentials.rs  manager.rs  messages.rs  mod.rs  out_data_messages.rs  scanner.rs
tui/: Cargo.toml
tui/src/: main.rs
viper-client/: Cargo.toml  README.md  capture.txt
viper-client/src/: channel.rs  client.rs  command.rs  command_response.rs  ctpp_channel.rs  device.rs  helper.rs  lib.rs  protocol.rs  rtpc_channel.rs  rtsp_channel.rs  stream.rs  stream_wrapper.rs  test_helper.rs  udp_stream_wrapper.rs  udpm_channel.rs
viper-client/src/audio_video/: audio_assembler.rs  mod.rs  video_assembler.rs
viper-client/src/cli/: viper_client.rs
viper-client/utils/: COMBINED_GUIDE.md  extract_av_combined.py
