[package]
name = "comelit-client-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.89"
base64 = { version = "0.22.1" }
clap = { version = "4.5.37", features = ["derive", "env"] }
crossterm = "0.26.0"
dashmap = "7.0.0-rc2"
derive_builder = "0.20.2"
futures = "0.3.27"
futures-util = "0.3.31"
mac_address = "1.1.8"
rand = "0.9.2"
rumqttc = { version = "0.25.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "comelit-hub-cli"
path = "src/cli/comelit.rs"
