[package]
name = "comelit-hub-matter"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "comelit-matter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-io = "2"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
comelit-client-rs = { path = "../client" }
embassy-futures = "0.1.2"
embassy-sync = "0.7"
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }
futures-lite = "2"
if-addrs = "0.13"
log = "0.4"
env_logger = "0.11"
rand = { version = "0.8", features = ["std", "std_rng"] }
rs-matter = { path = "../../rs-matter/rs-matter", features = [
    "os",
    "astro-dnssd",
    "max-groups-per-fabric-12",
    "max-group-keys-per-fabric-2",
    "max-group-endpoints-per-fabric-3",
] }
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["full"] }
