[package]
name = "viper-client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
tracing = "0.1"

[lib]
path = "src/lib.rs"
