[package]
name = "viper-client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive", "env"] }
comelit-client-rs = { path = "../client" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.2"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
dotenvy = { version = "0.15.7" }
tracing-subscriber = "0.3.22"

[lib]
path = "src/lib.rs"

[[bin]]
name = "viper-client"
path = "src/cli/viper_client.rs"
